<resources>
    <string name="app_name">lesson6</string>
    <string name="start_foreground">Start foreground service</string>
    <string name="stop_foreground">Stop foreground service</string>
    <string name="start_background">Start background service</string>
    <string name="start_job">Start job service</string>
    <string name="bind">Bind service</string>
    <string name="unbind">Unbind service</string>
    <string name="random">Get random number</string>
</resources>