<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/foreground_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_foreground"
        android:onClick="onForegroundClick" />

    <Button
        android:id="@+id/background_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_background"
        android:onClick="onBackgroundClick" />

    <Button
        android:id="@+id/job_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_job"
        android:onClick="onJobClick" />

    <Button
        android:id="@+id/bind_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bind"
        android:onClick="onBindClick" />

    <Button
        android:id="@+id/random_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/random"
        android:onClick="onRandomClicked" />

</LinearLayout>